--- a/compose-file/docker-compose.yml
+++ b/compose-file/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "8081:80"
     volumes:
       - ./nginx-config:/etc/nginx/conf.d
-      - my_volume:/app/data
+      - my_volume:/app/data   #### Named Volume
     environment:
       - DEBUG=true
       - ENVIRONMENT=production
